# apexid_telegram

./: .gitignore  pyproject.toml
bot/: __main__.py
bot/core/: api.py  config.py  redis.py
bot/core/decorators/: user.py
