[tool.poetry]
name = "apexid-telegram"
version = "0.1.0"
description = ""
authors = ["Ihor Savenko <csigorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.0"
requests = "^2.31.0"
redis = "^5.0.1"
qrcode = "^7.4.2"
pillow = "^10.2.0"
pyzbar = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
